# openalex-neo4j

./: .env.example  .gitignore  README.md  pyproject.toml
src/openalex_neo4j/: __init__.py  cli.py  embeddings.py  importer.py  models.py  neo4j_client.py  openalex_client.py  search.py
tests/: __init__.py  test_importer.py  test_integration.py  test_models.py  test_neo4j_client.py  test_neo4j_utils.py  test_openalex_client.py  test_search.py
tests/integration/: __init__.py  conftest.py  test_full_import.py  test_neo4j_integration.py  test_openalex_integration.py
